--- a/app/src/main/res/values-el/strings.xml
+++ b/app/src/main/res/values-el/strings.xml
@@ -92,7 +92,7 @@
     <string name="action_search">Αναζήτηση</string>
     <string name="action_select">Επιλογή</string>
     <string name="option_select_all">Επιλογή όλων</string>
-    <string name="option_select_none">Καταργήστε την επιλογή όλων</string>
+    <string name="option_select_none">Αποεπιλογή όλων</string>
     <string name="action_show_all">Εμφάνιση όλων</string>
     <string name="action_skip">Παράλ</string>
     <string name="action_synchronize">Συγχρονίζω</string>
@@ -185,8 +185,8 @@
     <string name="error_import_csv_line">Άγνωστο σφάλμα στη σειρά %1$d</string>
     <string name="error_import_csv_line_to_long">Η γραμμή είναι πολύ μεγάλη (σειρά=%1$d, μήκος=%2$d)</string>
     <string name="error_import_csv_missing_columns_x">Το αρχείο πρέπει να περιέχει στήλη με ένα από τα ακόλουθα όνοματα: %1$s</string>
-    <string name="error_import_failed">Αποτυχία Εισαγωγής.</string>
-    <string name="error_import_failed_for_record">Αποτυχία Εισαγωγής (%1$s).</string>
+    <string name="error_import_failed">Μη επιτυχημένη εισαγωγή.</string>
+    <string name="error_import_failed_for_record">Μη επιτυχημένη εισαγωγή (%1$s).</string>
     <string name="error_import_file_not_supported">Δεν είναι δυνατή η εισαγωγή του επιλεγμένου αρχείου.</string>
     <string name="error_network_failed_try_again">Ελέγξτε τη σύνδεση και δοκιμάστε ξανά.</string>
     <string name="error_network_please_connect">Συνδεθείτε στο διαδίκτυο.</string>
@@ -415,7 +415,7 @@
     <string name="lbl_styles_long">Στυλ λίστας βιβλίων</string>
     <string name="lbl_sync_date">Από</string>
     <string name="lbl_tab_alternative_editions">Εναλλακτικές εκδόσεις</string>
-    <string name="lbl_tab_details">Λεπτομ</string>
+    <string name="lbl_tab_details">Λεπτομέρειες</string>
     <string name="lbl_tab_lbl_ext_id">Εξωτερικό αναγνωριστικό</string>
     <string name="lbl_tab_notes">Σημειώσεις</string>
     <string name="lbl_tab_publication">Δημοσίευση</string>
@@ -446,7 +446,7 @@
     <string name="title_backup_and_export">Δημιουργία αντιγράφων ασφαλείας και εξαγωγή</string>
     <string name="option_apply_to_this_node_only">Μόνο αυτός ο κόμβος</string>
     <string name="option_apply_to_all_related_books">Όλα τα σχετικά βιβλία</string>
-    <string name="option_barcode_scan_mode_manual">Χειροκίνητα</string>
+    <string name="option_barcode_scan_mode_manual">Μη αυτόματο</string>
     <string name="option_barcode_scan_mode_continuous">Συνεχής σάρωση</string>
     <string name="option_book_sync_list_with_details">Συγχρονισμός/τοποθέτηση της λίστας</string>
     <string name="option_cover_crop">Περικοπή</string>
@@ -515,7 +515,7 @@
     <string name="info_export_report">Ένα αρχείο %1$s με όνομα «%2$s» δημιουργήθηκε στον επιλεγμένο φάκελο. Θα πρέπει να το αντιγράψετε με μη αυτόματο τρόπο σε άλλο μέρος για να προστατεύσετε τα δεδομένα σε περίπτωση που η συσκευή σας καταστραφεί, χαθεί ή κλαπεί.</string>
     <string name="info_export_successful">Η εξαγωγή ήταν επιτυχής</string>
     <string name="option_info_delete_removed_books">Τα βιβλία που έχουν διαγραφεί στην άλλη συσκευή θα διαγραφούν και σε αυτή τη συσκευή.</string>
-    <string name="info_import_complete">Εισαγωγή Ολοκληρώθηκε</string>
+    <string name="info_import_complete">Η εισαγωγή ολοκληρ.</string>
     <string name="info_import_partially_complete">Έγινε μερική εισαγωγή</string>
     <string name="progress_msg_cleaning_up">Καθαρισμό…</string>
     <string name="progress_msg_connecting">Σύνδεση…</string>
