--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -94,7 +94,7 @@
     <string name="action_search">Buscar</string>
     <string name="action_select">Seleccionar</string>
     <string name="option_select_all">Seleccionar todo</string>
-    <string name="option_select_none">Deselecciona todo</string>
+    <string name="option_select_none">Desmarcar todo</string>
     <string name="action_show_all">Mostrar todo</string>
     <string name="action_skip">Saltar</string>
     <string name="action_synchronize">Sincronizar</string>
@@ -198,8 +198,8 @@
     <string name="error_import_csv_line">Error desconocido en la fila %1$d</string>
     <string name="error_import_csv_line_to_long">La línea es demasiado larga (fila=%1$d, longitud=%2$d)</string>
     <string name="error_import_csv_missing_columns_x">El fichero debe tener una columna con uno de los nombres siguientes: %1$s</string>
-    <string name="error_import_failed">La importación falló.</string>
-    <string name="error_import_failed_for_record">La importación falló (%1$s).</string>
+    <string name="error_import_failed">Error al importar.</string>
+    <string name="error_import_failed_for_record">Error al importar (%1$s).</string>
     <string name="error_import_file_not_supported">El archivo seleccionado no se puede importar.</string>
     <string name="error_network_failed_try_again">Comprueba la conexión y vuelve a intentarlo.</string>
     <string name="error_network_please_connect">Debes conectarte a Internet.</string>
@@ -459,7 +459,7 @@
     <string name="title_backup_and_export">Copia de seguridad y exportación</string>
     <string name="option_apply_to_this_node_only">Este nodo solo</string>
     <string name="option_apply_to_all_related_books">Todos los libros relacionados</string>
-    <string name="option_barcode_scan_mode_manual">Manualmente</string>
+    <string name="option_barcode_scan_mode_manual">Manual</string>
     <string name="option_barcode_scan_mode_continuous">Escanear continuamente</string>
     <string name="option_book_sync_list_with_details">Sincronizar/posicionar la lista</string>
     <string name="option_cover_crop">Recortar</string>
@@ -528,7 +528,7 @@
     <string name="info_export_report">Se ha creado un archivo %1$s llamado «%2$s» en la carpeta seleccionada. Deberías copiarlo manualmente en otro lugar para proteger los datos en caso de que tu dispositivo se dañe, se pierda o te lo roben.</string>
     <string name="info_export_successful">Exportación exitosa</string>
     <string name="option_info_delete_removed_books">Los libros marcados como borrados en el otro dispositivo también se borrarán en este dispositivo.</string>
-    <string name="info_import_complete">Importación finalizada</string>
+    <string name="info_import_complete">Importación completada</string>
     <string name="info_import_partially_complete">Importación parcial realizada</string>
     <string name="progress_msg_cleaning_up">Limpiar…</string>
     <string name="progress_msg_connecting">Conectando…</string>
