--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -110,7 +110,6 @@
     <string name="error_storage_not_writable">请检查存储是否可写，并且有足够的空间。</string>
     <string name="error_search_x_failed_y">搜索%1$s失败：%2$s</string>
     <string name="error_file_not_found">找不到文件：%1$s</string>
-    <string name="error_import_failed">导入失败。</string>
     <string name="error_import_failed_for_record">导入失败（%1$s）。</string>
     <string name="error_import_csv_missing_columns_x">文件必须包含具有以下名称之一的列：%1$s</string>
     <string name="error_import_csv_line">%1$d 行中出现未知错误</string>
@@ -298,10 +297,17 @@
     <string name="action_import">导入</string>
     <string name="option_import">导入</string>
     <string name="lbl_import">导入</string>
-    <string name="lbl_location">位置</string>
+    <string name="lbl_location">地点</string>
     <string name="lbl_tab_notes">备注</string>
     <string name="action_show_options">选项</string>
     <string name="pt_ui_system_locale">N系统语言</string>
     <string name="error_invalid_url">无效地址（URL）</string>
-
+    <string name="option_select_all">"全选"</string>
+    <string name="option_select_none">"取消全选"</string>
+    <string name="lbl_tab_details">"详细信息"</string>
+    <string name="option_cover_crop">"剪裁"</string>
+    <string name="lbl_description">描述</string>
+    <string name="option_barcode_scan_mode_manual">手动</string>
+    <string name="info_import_complete">"导入已完成"</string>
+    <string name="error_import_failed">"导入失败"</string>
 </resources>
